# x3div

./: .gitignore  .gitmodules  2decomp  AUTHORS  CMakeLists.txt  CONTRIBUTORS  LICENSE  Makefile  Makefile.am  README.md  README.org  configure.ac
.github/workflows/: build.yml  unit_tests.yml
cmake/: FindDECOMP2D.cmake  X3D_Compilers.cmake
cmake/compilers/: X3D_flags_nvidia.cmake
decomp2d/: CMakeLists.txt  Makefile.am  decomp_2d.f90  factor.inc  fft_common_3d.inc  fft_cufft.f90  fft_fftw3.f90  fft_generic.f90  glassman.f90  halo.f90  halo.inc  io.f90  io_read_inflow.f90  io_write_outflow.f90  io_write_plane.inc  transpose_x_to_y.f90  transpose_x_to_y.inc  transpose_y_to_x.f90  transpose_y_to_x.inc  transpose_y_to_z.f90  transpose_y_to_z.inc  transpose_z_to_y.f90  transpose_z_to_y.inc
decomp2d/cmake/: gfortran_flags.cmake
src/: BC-tgv2d.f90  BC_tgv2d.f90  CMakeLists.txt  Makefile.am  bc_tgv.f90  bc_tgv2d.f90  case.f90  derive.f90  module_param.f90  mom.f90  navier.f90  parameters.f90  poisson.f90  schemes.f90  thomas.f90  time_integrators.f90  tools.f90  transeq.f90  var.f90  variables.f90  visu.f90  x3d_derive.f90  x3d_filters.f90  x3d_operator_1d.f90  x3d_operator_x_data.f90  x3d_operator_y_data.f90  x3d_operator_z_data.f90  x3d_parallel.f90  x3d_precision.f90  x3d_staggered.f90  x3d_tools.f90  x3d_transpose.f90  xcompact3d.f90
tests/: CMakeLists.txt  test_deriv.pf  test_dummy.pf
verification/: CMakeLists.txt  Makefile.am
verification/lib/: CMakeLists.txt  Makefile.am  x3d_unit_testing_tools.f90
verification/verif/: CMakeLists.txt  Makefile.am  initx00.pf  testx00.pf  x3d_driver.F90
